--- a/data/style.css
+++ b/data/style.css
@@ -1,28 +1,92 @@
-html {
-    font-family: Helvetica;
-    display: inline-block;
-    margin: 0px auto;
-    text-align: center;
+@media only screen and (max-width: 620px) {/* For mobile phones: */.exercise-list, .main, .right {width: 100%;}}
+
+*{
+  box-sizing: border-box;
+}
+
+button {
+  margin: 10px;
+}
+body {
+  font-family:Verdana;
+  color:#aaaaaa;
+}
+div {
+  overflow:auto
+}
+
+.title-div{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.title {
+  text-align: center;
+  color: black; 
+  margin: auto;
   }
-  h1{
-    color: #0F3376;
-    padding: 2vh;
-  }
-  p{
-    font-size: 1.5rem;
-  }
-  .button {
-    display: inline-block;
-    background-color: #008CBA;
-    border: none;
-    border-radius: 4px;
-    color: white;
-    padding: 16px 40px;
-    text-decoration: none;
-    font-size: 30px;
-    margin: 2px;
-    cursor: pointer;
-  }
-  .button2 {
-    background-color: #f44336;
-  }
+.connect-button-div{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.exercise-list{
+  width: 80%;
+  text-align: center; 
+  margin: auto; 
+  font-size: larger;
+}
+.exercise-list a {
+  padding: 8px;
+  margin-top: 7px;
+  display: block;
+  width: 100%;
+  color: black;
+}
+.control {
+  text-align: center;
+}
+.control button {
+  border-radius: 50%; 
+  height: 80px; 
+  width: 80px; 
+  margin: 10px 50px;
+}
+.exerciseList a {
+  padding: 8px;
+  margin-top: 7px;
+  display: block;
+  width: 100%;
+  color: black;
+}
+.status {
+  text-align: center; 
+  color: black;
+}
+.exercise-description{
+  width: 60%; 
+  margin: auto;
+}
+
+#connect-button{
+  vertical-align: middle;
+  font-size: 20px;
+  background-color: black;
+  color: white;
+  border-radius: 8px;
+  align-self: center;
+}
+#start {
+  background-color: rgb(0, 194, 0); 
+  color: black; 
+  border: solid 1px black;
+}
+#stop {
+  background-color: rgb(253, 11, 11); 
+  color: black; 
+  border: solid 1px black;
+}
